# habits-tracker-backend

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  habits.db  pyproject.toml  requirements.txt  skills-lock.json
alembic/: env.py
alembic/versions/: 4011950d2e3b_add_indexes_and_constraints.py  f72bb23122a4_initial.py
app/: database.py  main.py  models.py  scheduler.py  seeds.py
app/core/: cache.py  config.py
app/routers/: auth.py  badges.py  habits.py  logs.py  notifications.py  recomendations.py  recommendations.py  stats.py  users.py
app/schemas/: __init__.py  auth.py  badge.py  habit.py  log.py  notification.py  stats.py  user.py
app/services/: auth.py  badges.py  email.py  streak.py
tests/: conftest.py  test_auth.py  test_badges.py  test_habits.py  test_logs.py  test_notifications.py  test_stats.py  test_users.py
